--- a/seq/Cargo.toml
+++ b/seq/Cargo.toml
@@ -13,7 +13,9 @@ name = "tests"
 path = "tests/progress.rs"
 
 [dev-dependencies]
-trybuild = { version = "1.0.49", features = ["diff"] }
+trybuild = "1.0"
 
 [dependencies]
-# TODO
+proc-macro2 = "1.0.10"
+syn = {version = "1.0.17", features = ["extra-traits", "full", "visit-mut"]}
+quote = "1.0.3"
